[gd_scene load_steps=13 format=3 uid="uid://dpcelkwav7dc"]

[ext_resource type="Script" path="res://Main.gd" id="1_h2u22"]
[ext_resource type="Resource" uid="uid://qutdo4amnvqa" path="res://Objects/Resources/DefaultMargins.tres" id="2_csw5x"]
[ext_resource type="Texture2D" uid="uid://bygru7ga2xyja" path="res://Assets/board_final_classicsolitaire.png" id="2_fbu2l"]
[ext_resource type="PackedScene" uid="uid://drom4gytp3aq4" path="res://Objects/StockPileDeck.tscn" id="3_1w1nt"]
[ext_resource type="Texture2D" uid="uid://b5cf3sxe1q5mn" path="res://Assets/blank-board-560-by-600.png" id="4_51bac"]
[ext_resource type="Script" path="res://Objects/System Managers/CachesManager.gd" id="4_d1ice"]
[ext_resource type="PackedScene" uid="uid://gal5u7pannpg" path="res://Objects/WastePileDeck.tscn" id="4_f4tui"]
[ext_resource type="Script" path="res://Objects/System Managers/EmptyCellManager.gd" id="5_5t5j8"]
[ext_resource type="Script" path="res://Objects/System Managers/StacksManager.gd" id="7_1upp5"]
[ext_resource type="Script" path="res://Objects/System Managers/TableauManager.gd" id="7_espr2"]
[ext_resource type="PackedScene" uid="uid://bo8fo8ayta2eg" path="res://Objects/TableauStacks.tscn" id="7_ex4ny"]
[ext_resource type="PackedScene" uid="uid://bk8e2xf0bjsiu" path="res://Objects/FoundationStacks.tscn" id="9_uog6a"]

[node name="Main" type="Node" node_paths=PackedStringArray("CM", "SM", "TM")]
script = ExtResource("1_h2u22")
margins = ExtResource("2_csw5x")
CM = NodePath("CachesManager")
SM = NodePath("StacksManager")
TM = NodePath("TableauManager")

[node name="Board" type="TextureRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_fbu2l")
stretch_mode = 2

[node name="Board-Blank" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4_51bac")
stretch_mode = 2

[node name="EmptyCellManager" type="Node" parent="."]
script = ExtResource("5_5t5j8")
margins = ExtResource("2_csw5x")

[node name="CachesManager" type="Node" parent="." node_paths=PackedStringArray("stockpile", "wastepile")]
script = ExtResource("4_d1ice")
stockpile = NodePath("StockPileDeck")
wastepile = NodePath("WastePileDeck")

[node name="StockPileDeck" parent="CachesManager" instance=ExtResource("3_1w1nt")]

[node name="WastePileDeck" parent="CachesManager" instance=ExtResource("4_f4tui")]

[node name="TableauManager" type="Node" parent="." node_paths=PackedStringArray("tableau", "waste")]
script = ExtResource("7_espr2")
tableau = NodePath("TableauStacks")
waste = NodePath("WastePileDeck")

[node name="TableauStacks" parent="TableauManager" instance=ExtResource("7_ex4ny")]

[node name="WastePileDeck" parent="TableauManager" instance=ExtResource("4_f4tui")]

[node name="StacksManager" type="Node" parent="." node_paths=PackedStringArray("foundations", "tableau")]
script = ExtResource("7_1upp5")
foundations = NodePath("FoundationStacks")
tableau = NodePath("TableauStacks")

[node name="FoundationStacks" parent="StacksManager" instance=ExtResource("9_uog6a")]

[node name="TableauStacks" parent="StacksManager" instance=ExtResource("7_ex4ny")]

[node name="WastePileDeck" parent="StacksManager" instance=ExtResource("4_f4tui")]
